--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     </div>
                 </div>
                 <div class="w3-container">
-                    <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"></i>Инженер-программист
+                    <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"></i>Инженер-конструктор 1 категории
                     </p>
                     <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-teal"></i>г. Мытищи, М.О., Россия</p>
                     <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-teal"></i><a
@@ -197,8 +197,20 @@
                     </div>
                     <p>SolidWorks</p>
                     <div class="w3-progress-container w3-round-xlarge w3-small">
-                        <div class="w3-progressbar w3-round-xlarge w3-teal" style="width:70%">
-                            <div class="w3-center w3-text-white">70%</div>
+                        <div class="w3-progressbar w3-round-xlarge w3-teal" style="width:80%">
+                            <div class="w3-center w3-text-white">80%</div>
+                        </div>
+                    </div>
+					<p>Компас</p>
+                    <div class="w3-progress-container w3-round-xlarge w3-small">
+                        <div class="w3-progressbar w3-round-xlarge w3-teal" style="width:60%">
+                            <div class="w3-center w3-text-white">60%</div>
+                        </div>
+                    </div>
+					<p>AutoCad</p>
+                    <div class="w3-progress-container w3-round-xlarge w3-small">
+                        <div class="w3-progressbar w3-round-xlarge w3-teal" style="width:55%">
+                            <div class="w3-center w3-text-white">55%</div>
                         </div>
                     </div>
                     <p>MS Office</p>
@@ -326,7 +338,20 @@
                     <i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>
                     Опыт работы
                 </h2>
+				
+			<!-- МосАвтоСтекло -->               
+                <div class="w3-container">
+                    <h5 class="w3-opacity"><b>Ведущий инженер-конструктор 1 категории</b></h5>
+                    <P>Место работы: <a href="http://www.mosavtosteklo.ru" target="_blank">ООО «Мосавтостекло»</a>
+                    </P>
+                    <P><b>Обязанности:</b> конструирование узлов и оснастки для производства изделий из стекла в графических программных косплексах САПР Solidworks, Компас, AutoCad.
+                    </P>
+                    <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Май 2019 - <span
+                            class="w3-tag w3-teal w3-round">по настоящее время</span></h6>
+                    <hr>
+                </div>
 
+			<!-- ЭСТЕТ -->               
                 <div class="w3-container">
                     <h5 class="w3-opacity"><b>Инженер программист лазерных и гравировальных станков с ЧПУ</b></h5>
                     <P>Место работы: <a href="http://www.estet.ru" target="_blank">Столичный Ювелирный Завод "ЭСТЕТ"</a>
@@ -342,11 +367,12 @@
                             AC200</a>, <a href="http://www.faimond.com/faimond-products/ballsbeads/astra-ov" target="_blank">
                             Faimond Astra OV (станок для алмазной огранки)</a> .
                     </P>
-                    <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Январь 2004 - <span
-                            class="w3-tag w3-teal w3-round">по настоящее время</span></h6>
+                    <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Январь 2004 - Май 2019</h6>
                     <hr>
                 </div>
-                <div class="w3-container">
+			
+			<!-- Евроклимат -->                
+				<div class="w3-container">
                     <h5 class="w3-opacity"><b>Дезайнер печатной продукции</b></h5>
                     <P>Место работы: <a href="http://euroclimat.ru" target="_blank">"ЕВРОКЛИМАТ": кондиционеры,
                         вентиляция, тепловое оборудование</a></P>
