--- a/index.html
+++ b/index.html
@@ -317,6 +317,9 @@
 								<p>
 								<a href = "http://rosalind.info/users/Khachkara/">Ссылка на Rosalind</a>
 								</p>
+								<p>
+								<a href = "https://pythontutor.ru">Ссылка на ПИТОНТЬЮТОР</a>
+								</p>
                             </p>
                         </div>
                     </h4>
