--- a/en.html
+++ b/en.html
@@ -842,7 +842,8 @@
             class="fa fa-facebook-official w3-hover-text-indigo w3-large"></i></a>
     <a href="https://vk.com/id39817202" target="_blank"><i class="fa fa-vk w3-hover-text-indigo w3-large"></i></a>
     <a href="https://github.com/KhachKara" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
-    <p>The Creator of the page: Khachatur Karapetyan</p>
+    
+    <p>The © 2021 Khachatur Karapetyan</p>
 </footer>
 <!-- ----------------------------- Google Analytics -------------------------------- -->
 <script>
