Добавил курс ТГУ
Добавил курс ТГУ

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <title>Резюме</title>
 <meta charset="UTF-8">
@@ -300,6 +300,7 @@
 								Ищу возможность присоединиться к команде разработчиков, для получения реальной практики и улучшения своих навыков. 
 								Большое желание трудиться, обучаться и развиваться в данном направлении.
 								Выпускник РЭУ им. Плеханова 2019г., направление прикладная информатика.
+								С августа по ноябрь 2022 года проходил курс по повышению квалификации по федеральной программе содействия занятости «Дата Аналитик Старт Карьеры» от Томского Государственного Университиета. 
 								Готов рассмотреть различные варианты сотрудничества: от стажировки и до полной занятости.
 								Буду благодарен за любой опыт.
 								Мой багаж:
