Add LeetCode DataCamp
Add LeetCode DataCamp
Отредактировал  с вои навыки.

--- a/index.html
+++ b/index.html
@@ -300,15 +300,21 @@
 								Ищу возможность присоединиться к команде разработчиков, для получения реальной практики и улучшения своих навыков. 
 								Большое желание трудиться, обучаться и развиваться в данном направлении.
 								Выпускник РЭУ им. Плеханова 2019г., направление прикладная информатика.
+								<p>
 								С августа по ноябрь 2022 года проходил курс по повышению квалификации по федеральной программе содействия занятости «Дата Аналитик Старт Карьеры» от Томского Государственного Университиета. 
+								Есть опыт работы с модулями data science для python: Pandas, Statsmodels, scikit-learn, NumPy, SciPy, Matplotlib, NLTK и т.д.
+								</p>
+								<p>
 								Готов рассмотреть различные варианты сотрудничества: от стажировки и до полной занятости.
 								Буду благодарен за любой опыт.
+								</p>
+								<p>
 								Мой багаж:
+								</p>
 				    				<p>
 								- Базовый уровень (HTML+СSS), Less, GIT, 1С, MS Office, Power BI, SolidWorks, Revit, Rhinoceros 3D, Autocad;
 								</p>
-								- Опыт работы с NoSQL, MуSQL, MongoDb, SQL-запросы;Есть опыт по созданию адаптивных web-страниц, на языке программирования Python / Django. 
-								Есть теоретические знания и немного опыта работы с модулями data science для pyton: Pandas, Statsmodels, scikit-learn, NumPy, SciPy, Matplotlib, NLTK и т.д. 
+								- Опыт работы с PostgrSQL, MуSQL, MongoDb, SQL-запросы;Есть опыт по созданию адаптивных web-страниц, на языке программирования Python / Django.  
 								Опыт работы в операционной системе Linux на уровне разворачивания приложений и сервисов. Работал в конструкторском бюро Python программистом по автоматизации процессов изменения и составления спецификаций и проектных документов с помощью взаимодействия с API программы Autodesk Revit.
 								<p>
 								<a href = "https://www.linkedin.com/in/хачатур-карапетян-71a2aba2/">Ссылка на Linkedin
@@ -320,6 +326,12 @@
 								</p>
 								<p>
 								<a href = "https://pythontutor.ru">Ссылка на ПИТОНТЬЮТОР</a>
+								</p>
+								<p>
+								<a href = "https://leetcode.com/KhachKara/">Ссылка на LeetCode</a>
+								</p>
+								<p>
+								<a href = "https://app.datacamp.com/profile/khachatur2000">Ссылка на DataCamp</a>
 								</p>
                             </p>
                         </div>
@@ -348,7 +360,7 @@
                     <h5 class="w3-opacity"><b>Ведущий инженер-конструктор 1 категории</b></h5>
                     <P>Место работы: <a href="http://www.mosavtosteklo.ru" target="_blank">ООО «Мосавтостекло»</a>
                     </P>
-                    <P><b>Обязанности:</b> конструирование узлов и оснастки для производства изделий из стекла в графических программных косплексах САПР Solidworks, Компас, AutoCad.
+                    <P><b>Обязанности:</b> конструирование и анализ узлов и оснастки для производства изделий из стекла в графических программных косплексах САПР Solidworks, Компас, AutoCad.
                     </P>
                     <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Май 2019 - <span
                             class="w3-tag w3-teal w3-round">по настоящее время</span></h6>
@@ -357,10 +369,10 @@
 
 			<!-- ЭСТЕТ -->               
                 <div class="w3-container">
-                    <h5 class="w3-opacity"><b>Инженер программист лазерных и гравировальных станков с ЧПУ</b></h5>
+                    <h5 class="w3-opacity"><b>Инженер-программист лазерных и гравировальных станков с ЧПУ</b></h5>
                     <P>Место работы: <a href="http://www.estet.ru" target="_blank">Столичный Ювелирный Завод "ЭСТЕТ"</a>
                     </P>
-                    <P><b>Обязанности:</b> гравировка, резка, матовка, техническое и программное обслуживание станков
+                    <P><b>Обязанности:</b> Создание управляющей программы для гравировки, резки, матовки, техническое и программное обслуживание станков
                         <a href="http://esadigital.ru/catalog/gravirovalnye-stanki/egx-400/" target="_blank">Roland
                             400
                         </a>,
