--- a/index.html
+++ b/index.html
@@ -317,6 +317,9 @@
 								- Опыт работы с PostgrSQL, MуSQL, MongoDb, SQL-запросы;Есть опыт по созданию адаптивных web-страниц, на языке программирования Python / Django.  
 								Опыт работы в операционной системе Linux на уровне разворачивания приложений и сервисов. Работал в конструкторском бюро Python программистом по автоматизации процессов изменения и составления спецификаций и проектных документов с помощью взаимодействия с API программы Autodesk Revit.
 								<p>
+								Мои профили
+								</p>
+								<p>
 								<a href = "https://www.linkedin.com/in/хачатур-карапетян-71a2aba2/">Ссылка на Linkedin
 								</a>
 								</p> 
@@ -332,6 +335,9 @@
 								</p>
 								<p>
 								<a href = "https://app.datacamp.com/profile/khachatur2000">Ссылка на DataCamp</a>
+								</p>
+								<p>
+								<a href = "https://www.kaggle.com/khachkara">Ссылка на Kaggle</a>
 								</p>
                             </p>
                         </div>
