--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
 				    				<p>
 								- Базовый уровень (HTML+СSS), Less, GIT, 1С, MS Office, Power BI, SolidWorks, Revit, Rhinoceros 3D, Autocad;
 								</p>
-								- Опыт работы с PostgrSQL, MуSQL, MongoDb, SQL-запросы;Есть опыт по созданию адаптивных web-страниц, на языке программирования Python / Django.  
+								- Опыт работы с PostgreSQL, MуSQL, MongoDb, SQL-запросы;Есть опыт по созданию адаптивных web-страниц, на языке программирования Python / Django.  
 								Опыт работы в операционной системе Linux на уровне разворачивания приложений и сервисов. Работал в конструкторском бюро Python программистом по автоматизации процессов изменения и составления спецификаций и проектных документов с помощью взаимодействия с API программы Autodesk Revit.
 								<p>
 								Мои профили
