--- a/index.html
+++ b/index.html
@@ -320,6 +320,10 @@
 								Мои профили
 								</p>
 								<p>
+								<a href = "https://habr.com/ru/users/Khachkara/">Ссылка на Хабр
+								</a>
+								</p>
+								<p>
 								<a href = "https://www.linkedin.com/in/хачатур-карапетян-71a2aba2/">Ссылка на Linkedin
 								</a>
 								</p> 
