--- a/index.html
+++ b/index.html
@@ -343,6 +343,9 @@
 								<p>
 								<a href = "https://www.kaggle.com/khachkara">Ссылка на Kaggle</a>
 								</p>
+								<p>
+								<a href =  "https://stackoverflow.com/users/12917313/Хачатур-Карапетян">Ссылка на Stack Overflow</a>
+								</p>
                             </p>
                         </div>
                     </h4>
