--- a/index.html
+++ b/index.html
@@ -22,6 +22,18 @@
 		'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 		})(window,document,'script','dataLayer','GTM-5KWKPDH');</script>
 	<!-- End Google Tag Manager -->
+	
+	<!-- Google tag (gtag.js) -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-VXM78EE0WF"></script>
+		<script>
+		  window.dataLayer = window.dataLayer || [];
+		  function gtag(){dataLayer.push(arguments);}
+		  gtag('js', new Date());
+
+		  gtag('config', 'G-VXM78EE0WF');
+		</script>
+	<!-- End Google tag (gtag.js) -->
+	
 </head>	
 	
 <body class="w3-light-grey">
