new tag for googke analytics
new tag for googke analytics

--- a/index.html
+++ b/index.html
@@ -20,25 +20,14 @@
 		new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
 		j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 		'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-		})(window,document,'script','dataLayer','GTM-5KWKPDH');</script>
+		})(window,document,'script','dataLayer','GTM-WFPHMFT');</script>
 	<!-- End Google Tag Manager -->
-	
-	<!-- Google tag (gtag.js) -->
-		<script async src="https://www.googletagmanager.com/gtag/js?id=G-VXM78EE0WF"></script>
-		<script>
-		  window.dataLayer = window.dataLayer || [];
-		  function gtag(){dataLayer.push(arguments);}
-		  gtag('js', new Date());
-
-		  gtag('config', 'G-VXM78EE0WF');
-		</script>
-	<!-- End Google tag (gtag.js) -->
 	
 </head>	
 	
 <body class="w3-light-grey">
 	<!-- Google Tag Manager (noscript) -->
-		<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5KWKPDH"
+		<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WFPHMFT"
 		height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	<!-- End Google Tag Manager (noscript) -->
 
