Google tag manually
Google tag manually

--- a/index.html
+++ b/index.html
@@ -24,6 +24,19 @@
 	<!-- End Google Tag Manager -->
 	
 </head>	
+
+
+<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-Q03EWWKPY5"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+
+	  gtag('config', 'G-Q03EWWKPY5');
+	</script>	
+<!-- End Google tag manually -->	
+
 	
 <body class="w3-light-grey">
 	<!-- Google Tag Manager (noscript) -->
