--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
                         <hr>
                         <div class="about">
                             <p>
-                                Интересуюсь и развиваюсь в направлении по обработке и анализа больших данных на языке Python, SQL, Java.
+                                Интересуюсь и развиваюсь в направлении по обработке и анализа данных на языке Python, SQL, C++.
 								Ищу возможность присоединиться к команде разработчиков, для получения реальной практики и улучшения своих навыков. 
 								Большое желание трудиться, обучаться и развиваться в данном направлении.
 								Выпускник РЭУ им. Плеханова 2019г., направление прикладная информатика.
@@ -360,31 +360,31 @@
 								Мои профили
 								</p>
 								<p>
-								<a href = "https://habr.com/ru/users/Khachkara/">Ссылка на Хабр
+								<a href = "https://habr.com/ru/users/Khachkara/">Хабр
 								</a>
 								</p>
 								<p>
-								<a href = "https://www.linkedin.com/in/хачатур-карапетян-71a2aba2/">Ссылка на Linkedin
+								<a href = "https://www.linkedin.com/in/хачатур-карапетян-71a2aba2/">Linkedin
 								</a>
 								</p> 
-								<a href = "https://github.com/KhachKara"> Ссылка на GIT</a>
+								<a href = "https://github.com/KhachKara"> GIT</a>
 								<p>
-								<a href = "http://rosalind.info/users/Khachkara/">Ссылка на Rosalind</a>
+								<a href = "http://rosalind.info/users/Khachkara/"> Rosalind</a>
 								</p>
 								<p>
-								<a href = "https://pythontutor.ru">Ссылка на ПИТОНТЬЮТОР</a>
+								<a href = "https://pythontutor.ru"> ПИТОНТЬЮТОР</a>
 								</p>
 								<p>
-								<a href = "https://leetcode.com/KhachKara/">Ссылка на LeetCode</a>
+								<a href = "https://leetcode.com/KhachKara/"> LeetCode</a>
 								</p>
 								<p>
-								<a href = "https://app.datacamp.com/profile/khachatur2000">Ссылка на DataCamp</a>
+								<a href = "https://app.datacamp.com/profile/khachatur2000"> DataCamp</a>
 								</p>
 								<p>
-								<a href = "https://www.kaggle.com/khachkara">Ссылка на Kaggle</a>
+								<a href = "https://www.kaggle.com/khachkara"> Kaggle</a>
 								</p>
 								<p>
-								<a href =  "https://stackoverflow.com/users/12917313/Хачатур-Карапетян">Ссылка на Stack Overflow</a>
+								<a href =  "https://stackoverflow.com/users/12917313/Хачатур-Карапетян"> StackOverflow</a>
 								</p>
                             </p>
                         </div>
@@ -460,6 +460,17 @@
                 <h2 class="w3-text-grey w3-padding-16"><i
                         class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Образование</h2>
                 <div class="w3-container">
+                    <h5 class="w3-opacity"><b>
+                        <a href="https://tsu-dpo.ru/program/data" target="_blank">Томский Государственный
+                            Университет</a></b></h5>
+                    <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2021 - 2022</h6>
+                    <p>Форма обучения: Дистанционное / Вольный Слушатель Курса</p>
+                    <a href="https://cloud.mail.ru/public/fbxp/p3ZGsQk4d" target="_blank">Диплом</a>
+                    <a href="https://cloud.mail.ru/public/JWoT/S4pZJzrbi" target="_blank">Приложение к диплоому</a>
+                    <a href="https://github.com/KhachKara/TGU_kursovaya" target="_blank">Курсовой проект к диплоому</a>
+                    <hr>
+                </div>
+                <div class="w3-container">
                     <h5 class="w3-opacity"><b><a
                             href="https://www.rea.ru/ru/org/cathedries/Pages/Kafedra-prikladnykh-informacionnykh-tekhnologijj-i-informacionnojj-bezopasnosti.aspx"
                             target="_blank">РЭУ им Плеханова / Кафедра прикладной информатики и информационной безопасности</a></b>
@@ -488,6 +499,24 @@
                 <hr>
 
                 <div class="container-certificates">
+        <!-- ---------- Конец / Начало блока  «Основы разработки на C++: белый пояс» -->
+        <div class="w3-container khach-article khach-border">
+            <div class="container-article-text">
+                <h5 class="w3-opacity"><b>
+            <!-- 	<a href="https://vk.com/videos39817202?section=album_1" 
+                target="_blank"> -->
+                «Основы разработки на C++: белый пояс» Видео-курс <!-- </a> --> </b></h5>
+                <p> <a  href="https://www.coursera.org" target="_blank"> Сoursera.org </a>
+                    <a class="w3-tag w3-teal w3-round" href="https://www.coursera.org/account/accomplishments/verify/2R58WXVTB7TV?utm_source=link&utm_medium=certificate&utm_content=cert_image&utm_campaign=sharing_cta&utm_product=course"
+                    target="_blank" title="Змейка"> Сертификат об окончании курса <!</a> 
+                </p>
+            </div>
+            <div class="container-article-image">
+                <img src="img/certificates/ScreenShot032.jpg" height="160"
+                    alt="" class="">
+            </div>
+        </div>
+        <hr>        
 		<!-- ---------- Конец / Начало блока  «Lynda.com - Java Essential Training» -->
                     <div class="w3-container khach-article khach-border">
                         <div class="container-article-text">
