--- a/index.html
+++ b/index.html
@@ -500,23 +500,23 @@
 
                 <div class="container-certificates">
         <!-- ---------- Конец / Начало блока  «Основы разработки на C++: белый пояс» -->
-        <div class="w3-container khach-article khach-border">
-            <div class="container-article-text">
-                <h5 class="w3-opacity"><b>
-            <!-- 	<a href="https://vk.com/videos39817202?section=album_1" 
-                target="_blank"> -->
-                «Основы разработки на C++: белый пояс» Видео-курс <!-- </a> --> </b></h5>
-                <p> <a  href="https://www.coursera.org" target="_blank"> Сoursera.org </a>
-                    <a class="w3-tag w3-teal w3-round" href="https://www.coursera.org/account/accomplishments/verify/2R58WXVTB7TV?utm_source=link&utm_medium=certificate&utm_content=cert_image&utm_campaign=sharing_cta&utm_product=course"
-                    target="_blank" title="Змейка"> Сертификат об окончании курса <!</a> 
-                </p>
-            </div>
-            <div class="container-article-image">
-                <img src="img/certificates/ScreenShot032.jpg" height="160"
-                    alt="" class="">
-            </div>
-        </div>
-        <hr>        
+                    <div class="w3-container khach-article khach-border">
+                        <div class="container-article-text">
+                            <h5 class="w3-opacity"><b>
+                        <!-- 	<a href="https://vk.com/videos39817202?section=album_1" 
+                            target="_blank"> -->
+                            «Основы разработки на C++: белый пояс» Видео-курс <!-- </a> --> </b></h5>
+                            <p> <a  href="https://www.coursera.org" target="_blank"> Сoursera.org </a>
+                                <a class="w3-tag w3-teal w3-round" href="https://www.coursera.org/account/accomplishments/verify/2R58WXVTB7TV?utm_source=link&utm_medium=certificate&utm_content=cert_image&utm_campaign=sharing_cta&utm_product=course"
+                                target="_blank" title="Змейка"> Сертификат об окончании курса </a> 
+                            </p>
+                        </div>
+                        <div class="container-article-image">
+                            <img src="img/certificates/ScreenShot032.jpg" height="160"
+                                alt="" class="">
+                        </div>
+                    </div>
+                    <hr>        
 		<!-- ---------- Конец / Начало блока  «Lynda.com - Java Essential Training» -->
                     <div class="w3-container khach-article khach-border">
                         <div class="container-article-text">
