--- a/index.html
+++ b/index.html
@@ -500,12 +500,10 @@
 
                 <div class="container-certificates">
         <!-- ---------- Конец / Начало блока  «Основы разработки на C++: белый пояс» -->
-                    <div class="w3-container khach-article khach-border">
+                    <div class="w3-container khach-article">
                         <div class="container-article-text">
                             <h5 class="w3-opacity"><b>
-                        <!-- 	<a href="https://vk.com/videos39817202?section=album_1" 
-                            target="_blank"> -->
-                            «Основы разработки на C++: белый пояс» Видео-курс <!-- </a> --> </b></h5>
+                            «Основы разработки на C++ «Белый пояс» </a> </b></h5>
                             <p> <a  href="https://www.coursera.org" target="_blank"> Сoursera.org </a>
                                 <a class="w3-tag w3-teal w3-round" href="https://www.coursera.org/account/accomplishments/verify/2R58WXVTB7TV?utm_source=link&utm_medium=certificate&utm_content=cert_image&utm_campaign=sharing_cta&utm_product=course"
                                 target="_blank" title="Змейка"> Сертификат об окончании курса </a> 
@@ -518,7 +516,7 @@
                     </div>
                     <hr>        
 		<!-- ---------- Конец / Начало блока  «Lynda.com - Java Essential Training» -->
-                    <div class="w3-container khach-article khach-border">
+                    <div class="w3-container khach-article">
                         <div class="container-article-text">
                             <h5 class="w3-opacity"><b>
 						<!-- 	<a href="https://vk.com/videos39817202?section=album_1" 
@@ -1094,6 +1092,7 @@
             class="fa fa-facebook-official w3-hover-text-indigo w3-large"></i></a>
     <a href="https://vk.com/id39817202" target="_blank"><i class="fa fa-vk w3-hover-text-indigo w3-large"></i></a>
     <a href="https://github.com/KhachKara" target="_blank"><i class="fa fa-github w3-hover-text-indigo w3-large" aria-hidden="true"></i></a>
+    <a href="https://www.linkedin.com/in/khachatur-karapetian-71a2aba2/" target="_blank"><i class="fa fa-linkedin w3-hover-text-indigo w3-large" aria-hidden="true"></i></a>
     <p> © 2023 Хачатур Карапетян</p>
 </footer>
 <!-- ----------------------------- Google Analytics -------------------------------- -->
