Анализ данных в индустрии 2023
ScreenShot032.jpg

--- a/index.html
+++ b/index.html
@@ -499,6 +499,22 @@
                 <hr>
 
                 <div class="container-certificates">
+        <!-- ---------- Конец / Начало блока  «Анализ данных в индустрии 2023» -->
+                    <div class="w3-container khach-article">
+                        <div class="container-article-text">
+                            <h5 class="w3-opacity"><b>
+                            «Анализ данных в индустрии 2023» </a> </b></h5>
+                            <p> <a  href="https://edu.tinkoff.ru/my-activities/courses/stream/7b797055-21b0-4f0d-89fd-24905f664699/program" target="_blank"> Tinkoff </a>
+                                <a class="w3-tag w3-teal w3-round" href="https://cloud.mail.ru/public/qt2g/ka3CSGFub"
+                                target="_blank" title="Змейка"> Сертификат об окончании курса </a> 
+                            </p>
+                        </div>
+                        <div class="container-article-image">
+                            <img src="img/certificates/ScreenShot033.jpg" height="160"
+                                alt="" class="">
+                        </div>
+                    </div>
+                    <hr>   
         <!-- ---------- Конец / Начало блока  «Основы разработки на C++: белый пояс» -->
                     <div class="w3-container khach-article">
                         <div class="container-article-text">
