--- a/index.html
+++ b/index.html
@@ -510,7 +510,7 @@
                             </p>
                         </div>
                         <div class="container-article-image">
-                            <img src="img/certificates/ScreenShot033.png" height="160"
+                            <img src="img/certificates/ScreenShot033.jpg" height="160"
                                 alt="" class="">
                         </div>
                     </div>
