прект на Github

--- a/index.html
+++ b/index.html
@@ -513,6 +513,9 @@
                             <img src="img/certificates/ScreenShot033.jpg" height="160"
                                 alt="" class="">
                         </div>
+                        <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>30 июно 2023
+                        </h6>
+                        <a href="https://github.com/KhachKara/Tink_Data_Analytics_in_Industry_2023?target=_blank" target="_blank">Курс на GitHub</a>
                     </div>
                     <hr>   
         <!-- ---------- Конец / Начало блока  «Основы разработки на C++: белый пояс» -->
