--- a/index.html
+++ b/index.html
@@ -503,20 +503,22 @@
                     <div class="w3-container khach-article">
                         <div class="container-article-text">
                             <h5 class="w3-opacity"><b>
-                            «Анализ данных в индустрии 2023» </a> </b></h5>
-                            <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>30 июно 2023</h6>
-                            <a href="https://github.com/KhachKara/Tink_Data_Analytics_in_Industry_2023?target=_blank" target="_blank">Курс на GitHub</a>    
-                            <p> <a  href="https://edu.tinkoff.ru/my-activities/courses/stream/7b797055-21b0-4f0d-89fd-24905f664699/program" target="_blank"> Tinkoff </a>
-                                <a class="w3-tag w3-teal w3-round" href="https://cloud.mail.ru/public/qt2g/ka3CSGFub"
-                                target="_blank" title="Змейка"> Сертификат об окончании курса </a> 
+                            «Анализ данных в индустрии 2023» </b></h5>
+                            <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>10.07.2023
+                            </h6>
+                            <p> <a  href="https://edu.tinkoff.ru/my-activities/courses/stream/7b797055-21b0-4f0d-89fd-24905f664699/program" target="_blank"> udemy.com </a>
+                                <a class="w3-tag w3-teal w3-round" href="https://edu.tinkoff.ru/my-activities/courses/stream/7b797055-21b0-4f0d-89fd-24905f664699/program"
+                                target="_blank" title="Змейка">  Проекты курса на Github <!</a> 
                             </p>
+
+                            <a href="https://github.com/KhachKara/Tink_Data_Analytics_in_Industry_2023" target="_blank">Список тем видео-курса</a>
                         </div>
                         <div class="container-article-image">
                             <img src="img/certificates/ScreenShot033.jpg" height="160"
                                 alt="" class="">
                         </div>
                     </div>
-                    <hr>   
+                    <hr>  
         <!-- ---------- Конец / Начало блока  «Основы разработки на C++: белый пояс» -->
                     <div class="w3-container khach-article">
                         <div class="container-article-text">
