--- a/index.html
+++ b/index.html
@@ -506,7 +506,7 @@
                             «Анализ данных в индустрии 2023» </b></h5>
                             <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>10.07.2023
                             </h6>
-                            <p> <a  href="https://edu.tinkoff.ru/my-activities/courses/stream/7b797055-21b0-4f0d-89fd-24905f664699/program" target="_blank"> udemy.com </a>
+                            <p> <a  href="https://edu.tinkoff.ru/my-activities/courses/stream/7b797055-21b0-4f0d-89fd-24905f664699/program" target="_blank"> edu.tinkoff.ru </a>
                                 <a class="w3-tag w3-teal w3-round" href="https://edu.tinkoff.ru/my-activities/courses/stream/7b797055-21b0-4f0d-89fd-24905f664699/program"
                                 target="_blank" title="Змейка">  Проекты курса на Github <!</a> 
                             </p>
