--- a/index.html
+++ b/index.html
@@ -1113,6 +1113,8 @@
     <a href="https://vk.com/id39817202" target="_blank"><i class="fa fa-vk w3-hover-text-indigo w3-large"></i></a>
     <a href="https://github.com/KhachKara" target="_blank"><i class="fa fa-github w3-hover-text-indigo w3-large" aria-hidden="true"></i></a>
     <a href="https://www.linkedin.com/in/khachatur-karapetian-71a2aba2/" target="_blank"><i class="fa fa-linkedin w3-hover-text-indigo w3-large" aria-hidden="true"></i></a>
+    <a href="https://twitter.com/Khachkara" target="_blank"><i class="fa fa-twitter  w3-hover-text-indigo w3-large" aria-hidden="true"></i></a>
+    
     <p> © 2023 Хачатур Карапетян</p>
 </footer>
 <!-- ----------------------------- Google Analytics -------------------------------- -->
