--- a/index.html
+++ b/index.html
@@ -15,6 +15,14 @@
     }
 </style>
 <head>
+	<! -- Cronitor -->
+	<script async src="https://rum.cronitor.io/script.js"></script>
+		<script>
+	    		window.cronitor = window.cronitor || function() { (window.cronitor.q = window.cronitor.q || []).push(arguments); };
+	    		cronitor('config', { clientKey: '5b6569f927dbc43d5b9e777341b35e06' });
+		</script>
+	<! -- End of Cronitor -->
+	
 	<!-- Google Tag Manager GTM-WFPHMFT -->
 		<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
 		new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
